# Sol_mate

./: .gitignore  .gitmodules  LICENSE  README.md
main/: CMakeLists.txt  main.c
main/tests/inc/: hardware_test.h
main/tests/src/: ezbsp_exti_test.c  ezbsp_gpio_test.c  ezbsp_i2c_test.c  ezdev_als_test.c
